[project]
name = "pyipam"
version = "0.1.0"
description = "IPAM service written in Python"
dependencies = [
    "fastapi[all]>=0.104.1",
    "sqlalchemy>=2.0.23",
    "sqlmodel>=0.0.14",
    "pydantic-settings>=2.1.0",
    "psycopg2>=2.9.9",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.7.1",
    "ruff>=0.1.7",
    "alembic>=1.13.0",
]

[tool.hatch.metadata]
allow-direct-references = true
